--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/aaa/AgentUtils.java=UTF-8
+encoding//src/aaa/assignment3/SimulatorMulti.java=UTF-8
 encoding//src/assignment1/Test1.java=ISO-8859-1
